--- a/RazorCurrencyConverter/Pages/Index.cshtml
+++ b/RazorCurrencyConverter/Pages/Index.cshtml
@@ -6,22 +6,28 @@
 
 <div style="background-color:cornflowerblue">
     <header class="text-center">
-        <h1 class="display-4">Core5 Razor Pagees</h1>
+        <h1 class="display-4">Currency Converter</h1>
         <h2>by @Model.FullName</h2>
     </header>
     <br/><br/>
     <form method="post" class="mx-auto" style="width:200px">
         <p class="col-mb-2">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" required ="true" placeholder="Full Name" asp-for="FullName">
+            <label for="from">From Currency:</label>
+            <input required type="text" class="form-control" value="GBP">
+            @*<input type="text" class="form-control" required ="true" placeholder="Full Name" asp-for="FullName">*@
             @*<input type="text" class="form-control" name="name">*@
         </p>
         <p class="col-mb-4">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" required="true" name="email">
+            <label for="to">To Currency:</label>
+            <input required type="text" class="form-control" Value="EUR">
         </p>
+        <p class="col-mb-4">
+            <label for="amount">Converted Amount:</label>
+            <input required type="number" class="form-control" value="1">
+        </p>
+
         <p class="col-mb-2">
-            <button type="submit" class="btn btn-success">Register</button>
+            <button type="submit" class="btn btn-success">Get Exchange Rate</button>
         </p>
         <p class="col-mb-12">
             @ViewData["Message"]
